--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,7 @@
-// @import "base/variables";
-// @import "base/main";
+@import "base/variables";
+@import "base/main";
 
 //Components
-// @import "components/app";
+@import "components/quoteButtons";
+@import "components/quoteText";
+@import "components/infoModal";
