refactor with a 2 "panel" approach for transitioning images (top & bottom); commented out unused buttons

--- a/src/styles/base/_main.scss
+++ b/src/styles/base/_main.scss
@@ -1,12 +1,10 @@
+/* Ensure pure, inclusive box sizing across browsers. */
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 body {
-  //full screen responsive bg image
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
-  //clear out default spacing across browsers
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+	background-color: black;
+	height: 100vh;
 }
