--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,3 +1,7 @@
+/* -- Z-INDEXES --------------------------------------------*/
+$quote-layer: 10;
+$button-layer: 10;
+
 /* -- QUOTE TEXT --------------------------------------------*/
 $author-font-size: calc(18px + 0.6vw);
 $author-left-offset: 38%;
