--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import "base/main";
 
 //Components
+@import "components/app";
 @import "components/quoteButtons";
 @import "components/quoteText";
 @import "components/infoModal";
