--- a/src/styles/base/_main.scss
+++ b/src/styles/base/_main.scss
@@ -1,3 +1,34 @@
+/* Mixins
+------------------------------------ */
+//Fluid-type Mixin based on https://github.com/robertraichle/fluid-type-mixin
+//$min-vw & $max-vw are width values (in pixels), not actual vw unit values - essentially break points
+@mixin fluid-type($properties, $min-vw, $max-vw, $min-value, $max-value) {
+	@each $property in $properties {
+		#{$property}: $min-value;
+	}
+
+	@media screen and (min-width: $min-vw) {
+		@each $property in $properties {
+			#{$property}: calc(
+				#{$min-value} + #{strip-unit($max-value - $min-value)} * (100vw - #{$min-vw}) / #{strip-unit(
+						$max-vw - $min-vw
+					)}
+			);
+		}
+	}
+
+	@media screen and (min-width: $max-vw) {
+		@each $property in $properties {
+			#{$property}: $max-value;
+		}
+	}
+}
+@function strip-unit($value) {
+	@return $value / ($value * 0 + 1);
+}
+
+/* Styling
+------------------------------------ */
 /* Ensure pure, inclusive box sizing across browsers. */
 * {
 	margin: 0;
