--- a/src/styles/components/_quoteText.scss
+++ b/src/styles/components/_quoteText.scss
@@ -15,7 +15,7 @@ blockquote {
 	color: $opaque-white;
 	font-family: Georgia, serif;
 	font-style: italic;
-	text-shadow: 4px 4px 8px black;
+	text-shadow: 2px 2px 4px rgb(97, 97, 97), 3px 3px 4px black;
 	margin: 0.25rem 0;
 	padding: 0.35rem 2.3rem;
 	position: relative;
