--- a/src/styles/components/_quoteText.scss
+++ b/src/styles/components/_quoteText.scss
@@ -1,13 +1,15 @@
-.textWrapper {
-	display: none;
-	left: 50%;
-	max-width: 900px;
-	padding: 8px;
-	position: absolute;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	width: 90vw;
+.textContainer {
+	display: flex;
+	height: 100%;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
 	z-index: $quote-layer;
+}
+.textWrapper {
+	height: auto;
+	padding: 40px 20px;
+	max-width: 90vw;
 }
 blockquote {
 	@include fluid-type(font-size, 300px, 1200px, 12px, 36px);
@@ -15,34 +17,32 @@ blockquote {
 	color: $opaque-white;
 	font-family: Georgia, serif;
 	font-style: italic;
+	text-align: start;
 	text-shadow: 2px 2px 4px rgb(97, 97, 97), 2px 2px 4px black, 2px 2px 4px black, 2px 2px 4px black, 2px 2px 4px black,
 		2px 2px 8px rgb(97, 97, 97);
-	margin: 0.25rem 0;
-	padding: 0.35rem 2.3rem;
-	position: relative;
 }
 blockquote:before {
 	@include fluid-type(font-size, 300px, 1200px, 32px, 96px);
 	@include fluid-type(left, 300px, 1200px, 0px, -16px);
 	@include fluid-type(top, 300px, 1200px, -4px, -32px);
-	@include fluid-type(padding-left, 300px, 1200px, 18px, 0px);
 
 	color: $quotation-symbols;
 	content: "\201C";
-	display: block;
-	position: absolute;
+}
+blockquote:after {
+	color: $quotation-symbols;
+	content: "\201D";
+}
+.authorText {
+	margin-top: 10px;
 }
 cite {
 	@include fluid-type(font-size, 300px, 1200px, 10px, 28px);
 
 	color: $opaque-white;
-	display: block;
 	font-style: normal;
 	margin-left: 45%;
-	margin-top: 5px;
 	text-shadow: 2px 2px 4px rgb(97, 97, 97), 2px 2px 4px black, 2px 2px 4px black, 2px 2px 4px black, 2px 2px 4px black;
-
-	// text-shadow: 3px 3px 5px black;
 }
 cite:before {
 	color: $quotation-symbols;
@@ -51,10 +51,7 @@ cite:before {
 
 @media screen and (orientation: landscape) {
 	.textWrapper {
-		// padding: 2px;
-		// height: 15vw;
-		width: 80vw;
-		// max-height: 225px;
+		max-width: 80vw;
 	}
 	blockquote {
 		@include fluid-type(font-size, 300px, 1200px, 10px, 24px);
