added better handling for first run loading of quotes and images - eliminated blank quotes and double loading initial image

--- a/src/styles/components/_quoteText.scss
+++ b/src/styles/components/_quoteText.scss
@@ -6,6 +6,9 @@
 	align-items: center;
 	z-index: $quote-layer;
 }
+.hidden {
+	display: none;
+}
 .textWrapper {
 	height: auto;
 	padding: 40px 20px;
