fixed button spread on wide screens w/ flex vs grid; changed background color from blk to gray for nicer load; added gradient borders on top & bottom of quotes

--- a/src/styles/components/_quoteButtons.scss
+++ b/src/styles/components/_quoteButtons.scss
@@ -14,8 +14,6 @@
 	grid-area: dropList;
 }
 .buttonsContainer {
-	@include fluid-type(grid-gap, 300px, 1200px, 20px, 50px);
-
 	display: grid;
 	grid-template-columns: 4fr 1fr 1fr 1fr 1fr 4fr;
 	grid-template-rows: 1fr 1fr;
@@ -26,10 +24,11 @@
 	z-index: $button-layer;
 }
 .appButton {
-	@include fluid-type(font-size, 300px, 1200px, 8px, 24px);
-	@include fluid-type(height, 300px, 1200px, 20px, 50px);
-	@include fluid-type(width, 300px, 1200px, 20px, 50px);
+	@include fluid-type(font-size, 300px, 1200px, 8px, 18px);
+	@include fluid-type(height, 300px, 1200px, 20px, 40px);
+	@include fluid-type(width, 300px, 1200px, 20px, 40px);
 	@include fluid-type(border-radius, 300px, 1200px, 6px, 10px);
+	@include fluid-type(margin, 300px, 1200px, 10px, 14px);
 	max-width: 60px;
 
 	background-color: $transparent-gray;
@@ -66,11 +65,11 @@
 }
 @media screen and (orientation: landscape) {
 	.buttonsContainer {
-		grid-template-columns: 10fr 1fr 1fr 1fr 1fr 1fr 3fr 10fr;
-		grid-template-rows: 1fr;
-		grid-template-areas: ". btn1 btn2 btn3 btn4 . dropList .";
-
+		display: flex;
+		justify-content: center;
+		margin: 0 auto;
 		margin-top: 80vh;
+		max-width: 800px;
 	}
 	.appButton {
 		@include fluid-type(font-size, 300px, 1200px, 8px, 20px);
